--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="prism.css">
 </head>
 
 <body>
@@ -28,7 +29,7 @@
             <a class='nav-link' href="#Declaring_Variables">Declaring Variables</a>
             <a class='nav-link' href="#Variable_Scope">Variable Scope</a>
         </nav>
-        <main id="main-doc">
+        <main id="main-doc" class="language-javascript">
             <section id='Introduction' class="main-section">
                 <header>
                     Introduction
@@ -137,6 +138,7 @@ console.log(y);
     <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a>        to improve your experience.</p>
         <![endif]-->
+    <script src='./prism.js'></script>
     <script src='https://gitcdn.link/repo/freeCodeCamp/testable-projects-fcc/master/build/bundle.js'></script>
 </body>
 
